UI update together with functionality for uploading images and sending them to the flask server also added response handler activity for result from the model

--- a/FixMyRideApp/app/src/main/res/values/strings.xml
+++ b/FixMyRideApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">FixMyRideApp</string>
+    <string name="image_view">Image view</string>
+    <string name="images">Images</string>
+    <string name="Report">Report</string>
+    <string name="reportGeneration">What we\'ve gathered</string>
 </resources>
